# camera-calibration-gtsam

./: .dockerignore  .gitignore  Dockerfile  README.md  ros_entrypoint.sh
rosbags/rosbag2_2024_06_20-01_19_11/: metadata.yaml  rosbag2_2024_06_20-01_19_11_0.db3.zstd
src/: .rosinstall
src/apriltag_ros/apriltag_ros/: CMakeLists.txt
src/apriltag_ros/apriltag_ros/src/: apriltag_detector_component.cpp
src/mocap_calibration/: CMakeLists.txt  package.xml
src/mocap_calibration/launch/: extrinsic_calibration.launch.py  intrinsic_calibration.launch.py
src/mocap_calibration/src/: mocap_extrinsic_calibration.cpp  mocap_intrinsic_calibration.cpp  mocap_setcamerainfo.cpp
src/mocap_msgs/: CMakeLists.txt  package.xml
src/mocap_msgs/msg/: Blob.msg  Blobs.msg
